# roombara

./: .gitignore  CMakeLists.txt  README.md  build.xml
src/: 33-cvMatchShapes.cpp  CMakeLists.txt  algo.cpp  cam.cpp  doc  filters.cpp  findContours_demo.cpp  haar.cpp  kalman.cpp  lkdemo.cpp  main.cpp  main1.cpp  morphology.cpp  threshold.cpp
test_motion_tracking/include/: error.hpp  matcher.hpp  matcher_factory.hpp  surf_matcher.hpp  template_matcher.hpp
test_motion_tracking/src/: CMakeLists.txt  main.cpp  matcher.cpp  matcher_factory.cpp  surf_matcher.cpp  template_matcher.cpp
vision_lib/: vision_lib.cpp  vision_lib.h
